--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -1,11 +1,29 @@
 /* overall styles */
 
 html * {
-  font-family: "Lato";
+  font-family: "Bitter";
 }
 
 body {
   margin: 0;
+}
+
+h1 {
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: -0.5px;
+  margin-bottom: 0px;
+  color: var(--blue);
+}
+
+h2 {
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  margin-top: 2px;
 }
 
 h3 {
@@ -31,7 +49,7 @@ h3 {
 }
 
 .emphasis_p {
-  font-family: "Lato", sans-serif;
+  /* font-family: "Lato", sans-serif; */
   text-align: left;
   margin-bottom: 20px;
   color: var(--blue);
@@ -42,10 +60,11 @@ h3 {
 }
 
 p {
-  font-family: "Lato", sans-serif;
+  font-family: "Bitter", sans-serif;
   font-size: 18px;
   text-align: justify;
   padding: 10px 0;
+  line-height: 1.25;
 }
 .credit {
   font-family: "Libre Baskerville", Times, serif;
@@ -129,13 +148,13 @@ p {
   text-align: center;
 }
 
-.content_med{
-  grid-column:1/3;
-  height:fit-content;
+.content_med {
+  grid-column: 1/3;
+  height: fit-content;
 }
-.image_box_lf{
-  grid-column:3/5;
-  height:fit-content;
+.image_box_lf {
+  grid-column: 3/5;
+  height: fit-content;
 }
 
 /* nav bar */
