--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -1,11 +1,16 @@
 /* overall styles */
 
 html * {
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
 }
 
 body {
   margin: 0;
+}
+h1 {
+  font-size: 50px;
+  font-weight: 900;
+  margin-bottom: 0;
 }
 
 h3 {
@@ -45,6 +50,7 @@ p {
   font-family: "Lato", sans-serif;
   font-size: 18px;
   text-align: justify;
+  line-height: 1.5;
   padding: 10px 0;
 }
 .credit {
@@ -129,13 +135,13 @@ p {
   text-align: center;
 }
 
-.content_med{
-  grid-column:1/3;
-  height:fit-content;
+.content_med {
+  grid-column: 1/3;
+  height: fit-content;
 }
-.image_box_lf{
-  grid-column:3/5;
-  height:fit-content;
+.image_box_lf {
+  grid-column: 3/5;
+  height: fit-content;
 }
 
 /* nav bar */
