--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -7,14 +7,25 @@ html * {
 body {
   margin: 0;
 }
-h1 {
+
+.headline {
   font-size: 50px;
-  font-weight: 900;
-  margin-bottom: 0;
+  font-weight: 700;
+  margin-bottom: -10px;
+  margin-top: 1;
+  text-transform: uppercase;
+  letter-spacing: -0.01em;
+  color: var(--blue);
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 700;
+  margin-top: 0;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 25px;
 }
 
 :root {
@@ -42,15 +53,14 @@ h3 {
   color: var(--blue);
   padding-top: 2%;
   padding-bottom: 0;
-
-  font-weight: bold;
+  font-weight: 700;
 }
 
 p {
   font-family: "Lato", sans-serif;
   font-size: 18px;
   text-align: justify;
-  line-height: 1.5;
+  line-height: 1.6;
   padding: 10px 0;
 }
 .credit {
