--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -11,7 +11,7 @@ body {
 .headline {
   font-size: 50px;
   font-weight: 700;
-  margin-bottom: -10px;
+  margin-bottom: 0px;
   margin-top: 1;
   text-transform: uppercase;
   letter-spacing: -0.01em;
@@ -21,7 +21,7 @@ body {
 h2 {
   font-size: 30px;
   font-weight: 700;
-  margin-top: 0;
+  margin-top: 5px;
 }
 
 h3 {
