--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 
-.headline {
+h1 {
   font-size: 50px;
   font-weight: 700;
   margin-bottom: 0px;
@@ -19,7 +19,7 @@ body {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 700;
   margin-top: 5px;
 }
