--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -1,7 +1,7 @@
 /* overall styles */
 
 html * {
-  font-family: "Lato", sans-serif;
+  font-family: "Libre Baskerville", sans-serif;
 }
 
 body {
@@ -9,23 +9,27 @@ body {
 }
 
 h1 {
-  font-size: 50px;
+  font-family: "Lato";
+  font-size: 60px;
   font-weight: 700;
   margin-bottom: 0px;
   margin-top: 1;
   text-transform: uppercase;
-  letter-spacing: -0.01em;
+  /* letter-spacing: -0.01em; */
   color: var(--blue);
 }
 
 h2 {
+  font-family: "Lato";
   font-size: 35px;
   font-weight: 700;
   margin-top: 5px;
 }
 
 h3 {
+  font-family: "Lato";
   font-size: 25px;
+  margin-top: 5px;
 }
 
 :root {
@@ -47,7 +51,7 @@ h3 {
 }
 
 .emphasis_p {
-  font-family: "Lato", sans-serif;
+  font-family: "Libre Baskerville", sans-serif;
   text-align: left;
   margin-bottom: 20px;
   color: var(--blue);
@@ -57,7 +61,7 @@ h3 {
 }
 
 p {
-  font-family: "Lato", sans-serif;
+  font-family: "Libre Baskerville", sans-serif;
   font-size: 18px;
   text-align: justify;
   line-height: 1.6;
