--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -32,6 +32,10 @@ h3 {
   margin-top: 5px;
 }
 
+h4 {
+  font-weight: normal;
+}
+
 :root {
   --blue: #627c8d;
   --skyblue: #b7e1f2;
@@ -79,6 +83,10 @@ p {
   width: 100%;
   max-width: 800px;
   height: auto;
+}
+
+a:visited {
+  color: var(--blue);
 }
 
 /* wide sections */
@@ -183,6 +191,11 @@ p {
   text-align: center;
   vertical-align: middle;
 }
+
+.nav-bar a:visited {
+  color: var(--white);
+}
+
 .nav-bar #Intro {
   grid-column: 1/2;
 }
@@ -464,4 +477,15 @@ button:hover {
   right: 0;
   background: #fff;
   z-index: -1;
+}
+
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #dde6ed;
+  text-align: center;
+  margin-top: 0px;
+  padding-top: 30px;
+  padding-bottom: 40px;
 }
