--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -15,7 +15,8 @@ h1 {
   margin-bottom: 0px;
   margin-top: 1;
   text-transform: uppercase;
-  /* letter-spacing: -0.01em; */
+  letter-spacing: -0.01em;
+  text-align: left;
   color: var(--blue);
 }
 
@@ -166,7 +167,6 @@ a {
 .content_center h3 {
   text-align: center;
   text-align-last: center;
-
 }
 
 .content_med {
@@ -377,8 +377,8 @@ a {
 
 /* Test */
 
-#next_steps{
-  height:960px;
+#next_steps {
+  height: 960px;
 }
 
 #background {
@@ -410,73 +410,73 @@ a {
   z-index: 4;
   height: 166px;
   width: 126px;
-  display:flex;
-  align-items:flex-start;
+  display: flex;
+  align-items: flex-start;
   justify-content: center;
   /* border: black solid; */
   overflow: hidden;
 }
 
-#w1{
-  top:428px;
-  left:-244px;
+#w1 {
+  top: 428px;
+  left: -244px;
 }
 
-#w2{
-  top:428px;
-  left:-64px;
+#w2 {
+  top: 428px;
+  left: -64px;
 }
 
-#w3{
-  top:428px;
-  left:115px;
+#w3 {
+  top: 428px;
+  left: 115px;
 }
 
-#w4{
-  top:685px;
-  left:-244px;
+#w4 {
+  top: 685px;
+  left: -244px;
 }
 
-#w5{
-  top:685px;
-  left:-63px;
+#w5 {
+  top: 685px;
+  left: -63px;
 }
 
-.decor{
-  position:absolute;
-  z-index:5;
-  height:52px;
+.decor {
+  position: absolute;
+  z-index: 5;
+  height: 52px;
 }
-#d1{
-  top:549px;
-  left:-262px;
+#d1 {
+  top: 549px;
+  left: -262px;
 }
-#d2{
-  top:549px;
-  left:-78px;
-}
-
-#d3{
-  top:549px;
-  left:100px;
+#d2 {
+  top: 549px;
+  left: -78px;
 }
 
-#d4{
-  top:806px;
-  left:-262px;
+#d3 {
+  top: 549px;
+  left: 100px;
 }
 
-#d5{
-  top:806px;
-  left:-78px;
+#d4 {
+  top: 806px;
+  left: -262px;
 }
 
-#decor1{
-  position:absolute;
-  z-index:5;
-  height:30px;
-  top:316px;
-  left:-136px;
+#d5 {
+  top: 806px;
+  left: -78px;
+}
+
+#decor1 {
+  position: absolute;
+  z-index: 5;
+  height: 30px;
+  top: 316px;
+  left: -136px;
 }
 
 /* popup */
@@ -502,7 +502,7 @@ a {
   left: 0;
   bottom: 0;
   right: 0;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   z-index: -2;
 }
 
@@ -513,27 +513,26 @@ a {
   left: 0;
   bottom: 0;
   right: 0;
-  background: #FFF;
+  background: #fff;
   z-index: -1;
 }
 
 button {
-    background-color: var(--white);
-    color:var(--gray-dark);
-    border:none;
-    font-size: 14px;
-    width:134px;
-    height:170px;
-    line-height:1.5;
-    
+  background-color: var(--white);
+  color: var(--gray-dark);
+  border: none;
+  font-size: 14px;
+  width: 134px;
+  height: 170px;
+  line-height: 1.5;
 }
 
 button:hover {
-    background-color: var(--gray-blue);
-    color:var(--dark);
-    /* border: 3px solid var(--skyblue); */
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
+  background-color: var(--gray-blue);
+  color: var(--dark);
+  /* border: 3px solid var(--skyblue); */
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
 }
 
 /* footer */
