added citation and about info

--- a/staticFiles/css/style_v3.css
+++ b/staticFiles/css/style_v3.css
@@ -580,3 +580,41 @@ button:hover {
   padding-top: 30px;
   padding-bottom: 40px;
 }
+
+/* citations */
+body {
+  counter-reset: footnotes;
+}
+
+a[aria-describedby="footnote-label"] {
+  counter-increment: footnotes; /* 1 */
+  text-decoration: none; /* 2 */
+  color: inherit; /* 2 */
+  cursor: default; /* 2 */
+  outline: none; /* 2 */
+  font-style: italic;
+}
+a[aria-describedby="footnote-label"]::after {
+  content: "[" counter(footnotes) "]"; /* 1 */
+  vertical-align: super; /* 2 */
+  font-size: 0.5em; /* 3 */
+  margin-left: 2px; /* 4 */
+  color: var(--blue); /* 5 */
+  text-decoration: underline; /* 5 */
+  cursor: pointer; /* 5 */
+}
+a[aria-describedby="footnote-label"]:focus::after {
+  outline: thin dotted;
+  outline-offset: 2px;
+}
+
+/* Citation */
+#sources{
+  grid-column:1/5;
+}
+#sources li{
+  padding:3px;
+}
+#sources a{
+  font-style:italic
+}
